[gd_scene load_steps=20 format=3 uid="uid://b4drjox4vbxjx"]

[ext_resource type="Texture2D" uid="uid://33a7od21tduv" path="res://asset/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_vonvt"]
[ext_resource type="Script" path="res://player/Player.gd" id="1_yed22"]
[ext_resource type="PackedScene" uid="uid://crwqryv4tc8iu" path="res://sfx/death.tscn" id="2_af40i"]
[ext_resource type="PackedScene" uid="uid://xpvwyvofedxh" path="res://magic/ritual.tscn" id="3_teapv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srnoq"]
radius = 15.0

[sub_resource type="Animation" id="Animation_jlue3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_jpxi2"]
resource_name = "atk_down_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_tc3p8"]
resource_name = "atk_down_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_pon3p"]
resource_name = "atk_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_q5w12"]
resource_name = "atk_side_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_3qo5e"]
resource_name = "atk_up_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_3mr28"]
resource_name = "atk_up_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_uc744"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_2uwvl"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lver"]
_data = {
"RESET": SubResource("Animation_jlue3"),
"atk_down_1": SubResource("Animation_jpxi2"),
"atk_down_2": SubResource("Animation_tc3p8"),
"atk_side_1": SubResource("Animation_pon3p"),
"atk_side_2": SubResource("Animation_q5w12"),
"atk_up_1": SubResource("Animation_3qo5e"),
"atk_up_2": SubResource("Animation_3mr28"),
"idle": SubResource("Animation_uc744"),
"run": SubResource("Animation_2uwvl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tb8po"]
radius = 93.0484

[sub_resource type="CircleShape2D" id="CircleShape2D_nq6q5"]
radius = 53.1507

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyag4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbrsq"]
bg_color = Color(1, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_yed22")
death_prefab = ExtResource("2_af40i")
ritual_scene = ExtResource("3_teapv")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -33)
texture = ExtResource("1_vonvt")
hframes = 6
vframes = 8
region_rect = Rect2(0, 22, 166.727, 176)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_srnoq")
debug_color = Color(0, 0.6, 0.701961, 0.0980392)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2lver")
}
autoplay = "idle"

[node name="SwordArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_tb8po")

[node name="HitBoxArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
shape = SubResource("CircleShape2D_nq6q5")
debug_color = Color(0.980392, 0, 0.384314, 0.419608)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = 3.0
offset_right = 25.0
offset_bottom = 10.0
theme_override_styles/background = SubResource("StyleBoxFlat_tyag4")
theme_override_styles/fill = SubResource("StyleBoxFlat_gbrsq")
value = 18.03
show_percentage = false
